# automotive_driving_IVS

./: .gitignore
py_code/Documents/: 2026-06-12_진행내역.md  Follow-Tool_HW_Info.md  follow_tool_implementation_1.md  follow_tool_project_spec.md  follow_tool_todoA.md  hand_gesture_통합가이드.md  hw_block_diagram.html  ppt_prompt.md  project_spec_1.md  servo_pinout_viz.html  viz1_state_nodes.html  viz2_node_relations.html  중간점검_피드백자료.md
py_code/aruco/: aruco_detection.py  aruco_logic.py  aruco_test.py  test_aruco_logic.py
py_code/calibration/: calib_verify.py  calibrate_camera.py  calibration.py  capture_calib.py  usb_calibration.py
py_code/focus/: focus_check.py  focus_web.py
py_code/issue_report/: 2026-06-15_aruco_distance_and_display.md  aruco_node_handoff.md  aruco_node_test_plan.md
py_code/preview/: camera_preview.py  usb_camera_preview.py
py_code/py_example/: dc.py  detect_person.py  dual_camera.py  imu_distance.py  infrared_dist.py  led_blink.py  (+7 more)
ros2_ws/: TEST_PLAN.md  brownout_test_protocol.md  state_machine_changes.md  test_run_guide.md  worklog_2026-06-19.md
ros2_ws/src/hand_gesture/: PORTING.md  package.xml  requirements.txt  setup.py
ros2_ws/src/hand_gesture/hand_gesture/: camera.py  hand_gesture_node.py  static_gesture.py
ros2_ws/src/hand_gesture/launch/: hand_gesture.launch.py
ros2_ws/src/motor_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/motor_interfaces/msg/: ArucoPose.msg  MotorCmd.msg
ros2_ws/src/motor_node/: package.xml  setup.py
ros2_ws/src/motor_node/motor_node/: forward_only.py  motor_node.py  motor_node.py.bak.20260618_115702
(+8 files in other folders)
