<?xml version="1.0"?>
<package format="3">
  <name>motor_node</name>
  <version>0.0.0</version>
  <description>Motor control node</description>
  <maintainer email="ivs@todo.todo">ivs</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>motor_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
